# simui

./: .clang-format  CMakeLists.txt  LICENSE  README.md  build.sh
examples/: stopwatch.cpp
include/: .context.h.swp  .text.h.swp  .window.h.swp  context.h  helper.h  simui.h  text.h  vec2.h  widget.h  window.h
include/simui/: context.h  font_data.h  helper.h  simui.h  text.h  widget.h  window.h
src/: .context.c.swp  .main.c.swp  .text.c.swp  .window.c.swp  context.c  helper.c  main.c  text.c  widget.c  window.c
